# dumb_radius

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: main.rs
