[package]
name = "dumb_radius"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radius = "0.2"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.0", features = ["signal", "net"] }
async-trait = "0.1"
clap = "2.34"
hmac = "0.11"
sha2 = "*"
base64 = "*"