[package]
name = "dumb_radius"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
radius = "0.2"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.15", features = ["signal", "net"] }
async-trait = "0.1"
clap = { version = "3.2.8", features = ["env"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.13"